fix: Fixed bug in sidebar caused while shifting to module.css
Fixed the sidebar's visual appeal and user-friendliness by displaying user profile images within a circular frame. Additionally, refine the handling of the dark theme preference for consistent application across the user interface.

--- a/frontend/components/style/Sidebar.module.css
+++ b/frontend/components/style/Sidebar.module.css
@@ -72,7 +72,10 @@
 }
 
 #user_image {
+  width: 35px;
   height: 35px;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 #user_name {
